--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "novel-spider"
-version = "0.2.0"
+name = "docln_fetch"
+version = "0.1.0"
 edition = "2024"
 
 [dependencies]
@@ -8,8 +8,9 @@ scraper = "0.24"
 serde_json = "1.0"
 chrono = "0.4"
 anyhow = "1.0"
-zip = "5.0"
+zip = "6.0"
 sha2 = "0.10"
+bytes = "1.10"
 
 [dependencies.reqwest]
 version = "0.12"
