--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,10 @@ anyhow = "1.0"
 zip = "6.0"
 sha2 = "0.10"
 bytes = "1.10"
+reqwest = { version = "0.12", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
 
-[dependencies.reqwest]
-version = "0.12"
-features = ["json"]
-
-[dependencies.tokio]
-version = "1"
-features = ["full"]
-
-[dependencies.serde]
-version = "1.0"
-features = ["derive"]
+[[bin]]
+name = "docln-fetch"
+path = "src/main.rs"
