--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,11 @@ scraper = "0.24"
 serde_json = "1.0"
 chrono = "0.4"
 anyhow = "1.0"
-zip = "6.0"
 sha2 = "0.10"
 bytes = "1.10"
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
-serde = { version = "1.0", features = ["derive"] }
+async_zip = { version = "0.0.18", features = ["tokio", "deflate", "tokio-fs"] }
 
 [[bin]]
 name = "docln-fetch"
