--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,15 @@ chrono = "0.4"
 anyhow = "1.0"
 sha2 = "0.10"
 bytes = "1.10"
+tracing = "0.1"
+tracing-subscriber = "0.3"
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 async_zip = { version = "0.0.18", features = ["tokio", "deflate", "tokio-fs"] }
+
+[profile.release]
+lto = true
+strip = true
 
 [[bin]]
 name = "docln-fetch"
