--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,21 +13,24 @@ chrono = "0.4"
 anyhow = "1.0"
 sha2 = "0.10"
 bytes = "1.10"
-tracing = "0.1"
-reqwest = "0.12"
-tracing-subscriber = "0.3"
-
-[dependencies.tokio]
-version = "1"
-features = ["full"]
-
-[dependencies.async_zip]
-version = "0.0.18"
-features = [
-    "tokio",
-    "deflate",
-    "tokio-fs",
-]
+reqwest = { version ="0.12.24", features = ["cookies"] }
+linkify = "0.10"
+typetag = "0.2"
+regex = "1.7"
+url = "2.3"
+tower = { version = "0.5", features = ["util", "limit", "buffer"] }
+http = "1.3"
+# tower-http = { version = "0.6", features = ["trace"] }
+tower-http-client = "0.5"
+tower-reqwest = "0.5"
+ua_generator = "0.5"
+rand = "0.9.2"
+serde = { version = "1.0", features = ["derive"] }
+config = { version = "0.15", features = ["toml"] }
+tracing = { version = "0.1", features = ["async-await"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
+tokio ={ version = "1.48.0", features = ["rt-multi-thread", "macros", "fs"] }
+async_zip = { version = "0.0.18", features = ["tokio", "deflate", "tokio-fs"] }
 
 [profile.release]
 lto = true
